Add stock snapshot
