# backend/docs/swagger.json
@@ -681,6 +681,73 @@
                 }
             }
         },
+        "/stocksnapshot/{symbol}": {
+            "get": {
+                "security": [
+                    {
+                        "OAuth2Password": []
+                    }
+                ],
+                "description": "Get stock snapshot by symbol.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "stocksnapshot"
+                ],
+                "summary": "Read stock snapshot by symbol",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Ticker symbol",
+                        "name": "symbol",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/responses.SuccessResponse-presenter_TickerResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/responses.ErrorResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/responses.ErrorResponse"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/responses.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/responses.ErrorResponse"
+                        }
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity",
+                        "schema": {
+                            "$ref": "#/definitions/responses.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/ticker": {
             "get": {
                 "security": [
@@ -730,6 +797,74 @@
                     },
                     "401": {
                         "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/responses.ErrorResponse"
+                        }
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity",
+                        "schema": {
+                            "$ref": "#/definitions/responses.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/ticker/search": {
+            "post": {
+                "security": [
+                    {
+                        "OAuth2Password": []
+                    }
+                ],
+                "description": "Search symbol.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "tickers"
+                ],
+                "summary": "Search symbol",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "format": "symbol",
+                        "description": "symbol",
+                        "name": "symbol",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/responses.SuccessResponse-array_presenter_TickerResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/responses.ErrorResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/responses.ErrorResponse"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/responses.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
                         "schema": {
                             "$ref": "#/definitions/responses.ErrorResponse"
                         }
@@ -920,7 +1055,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/responses.SuccessResponse-array_presenter_UserResponse"
+                            "$ref": "#/definitions/responses.SuccessResponse-array_github_com_hiennguyen9874_stockk-go_internal_users_presenter_UserResponse"
                         }
                     },
                     "400": {
@@ -975,7 +1110,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/responses.SuccessResponse-presenter_UserResponse"
+                            "$ref": "#/definitions/responses.SuccessResponse-github_com_hiennguyen9874_stockk-go_internal_users_presenter_UserResponse"
                         }
                     },
                     "400": {
@@ -1021,7 +1156,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/responses.SuccessResponse-presenter_UserResponse"
+                            "$ref": "#/definitions/responses.SuccessResponse-github_com_hiennguyen9874_stockk-go_internal_users_presenter_UserResponse"
                         }
                     },
                     "400": {
@@ -1088,7 +1223,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/responses.SuccessResponse-presenter_UserResponse"
+                            "$ref": "#/definitions/responses.SuccessResponse-github_com_hiennguyen9874_stockk-go_internal_users_presenter_UserResponse"
                         }
                     },
                     "400": {
@@ -1157,7 +1292,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/responses.SuccessResponse-presenter_UserResponse"
+                            "$ref": "#/definitions/responses.SuccessResponse-github_com_hiennguyen9874_stockk-go_internal_users_presenter_UserResponse"
                         }
                     },
                     "400": {
@@ -1224,7 +1359,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/responses.SuccessResponse-presenter_UserResponse"
+                            "$ref": "#/definitions/responses.SuccessResponse-github_com_hiennguyen9874_stockk-go_internal_users_presenter_UserResponse"
                         }
                     },
                     "400": {
@@ -1298,7 +1433,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/responses.SuccessResponse-presenter_UserResponse"
+                            "$ref": "#/definitions/responses.SuccessResponse-github_com_hiennguyen9874_stockk-go_internal_users_presenter_UserResponse"
                         }
                     },
                     "400": {
@@ -1363,7 +1498,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/responses.SuccessResponse-presenter_UserResponse"
+                            "$ref": "#/definitions/responses.SuccessResponse-github_com_hiennguyen9874_stockk-go_internal_users_presenter_UserResponse"
                         }
                     },
                     "400": {
@@ -1503,7 +1638,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/responses.SuccessResponse-presenter_UserResponse"
+                            "$ref": "#/definitions/responses.SuccessResponse-github_com_hiennguyen9874_stockk-go_internal_users_presenter_UserResponse"
                         }
                     },
                     "400": {
@@ -1864,6 +1999,64 @@
         }
     },
     "definitions": {
+        "github_com_hiennguyen9874_stockk-go_internal_auth_presenter.UserResponse": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "is_active": {
+                    "type": "boolean"
+                },
+                "is_superuser": {
+                    "type": "boolean"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
+                },
+                "verified": {
+                    "type": "boolean"
+                }
+            }
+        },
+        "github_com_hiennguyen9874_stockk-go_internal_users_presenter.UserResponse": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "is_active": {
+                    "type": "boolean"
+                },
+                "is_superuser": {
+                    "type": "boolean"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
+                },
+                "verified": {
+                    "type": "boolean"
+                }
+            }
+        },
         "httpErrors.ErrResponse": {
             "type": "object",
             "properties": {
@@ -2014,6 +2207,9 @@
                 },
                 "token_type": {
                     "type": "string"
+                },
+                "user": {
+                    "$ref": "#/definitions/github_com_hiennguyen9874_stockk-go_internal_auth_presenter.UserResponse"
                 }
             }
         },
@@ -2043,35 +2239,6 @@
                     "type": "string",
                     "minLength": 8,
                     "example": "password"
-                }
-            }
-        },
-        "presenter.UserResponse": {
-            "type": "object",
-            "properties": {
-                "created_at": {
-                    "type": "string"
-                },
-                "email": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "is_active": {
-                    "type": "boolean"
-                },
-                "is_superuser": {
-                    "type": "boolean"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "updated_at": {
-                    "type": "string"
-                },
-                "verified": {
-                    "type": "boolean"
                 }
             }
         },
@@ -2202,6 +2369,21 @@
                 }
             }
         },
+        "responses.SuccessResponse-array_github_com_hiennguyen9874_stockk-go_internal_users_presenter_UserResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/github_com_hiennguyen9874_stockk-go_internal_users_presenter.UserResponse"
+                    }
+                },
+                "is_success": {
+                    "type": "boolean",
+                    "example": true
+                }
+            }
+        },
         "responses.SuccessResponse-array_presenter_ClientResponse": {
             "type": "object",
             "properties": {
@@ -2232,21 +2414,6 @@
                 }
             }
         },
-        "responses.SuccessResponse-array_presenter_UserResponse": {
-            "type": "object",
-            "properties": {
-                "data": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/presenter.UserResponse"
-                    }
-                },
-                "is_success": {
-                    "type": "boolean",
-                    "example": true
-                }
-            }
-        },
         "responses.SuccessResponse-array_presenter_WatchListResponse": {
             "type": "object",
             "properties": {
@@ -2255,6 +2422,18 @@
                     "items": {
                         "$ref": "#/definitions/presenter.WatchListResponse"
                     }
+                },
+                "is_success": {
+                    "type": "boolean",
+                    "example": true
+                }
+            }
+        },
+        "responses.SuccessResponse-github_com_hiennguyen9874_stockk-go_internal_users_presenter_UserResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/github_com_hiennguyen9874_stockk-go_internal_users_presenter.UserResponse"
                 },
                 "is_success": {
                     "type": "boolean",
@@ -2279,18 +2458,6 @@
             "properties": {
                 "data": {
                     "$ref": "#/definitions/presenter.TickerResponse"
-                },
-                "is_success": {
-                    "type": "boolean",
-                    "example": true
-                }
-            }
-        },
-        "responses.SuccessResponse-presenter_UserResponse": {
-            "type": "object",
-            "properties": {
-                "data": {
-                    "$ref": "#/definitions/presenter.UserResponse"
                 },
                 "is_success": {
                     "type": "boolean",
