# backend/internal/stockssnapshot/delivery/http/routes.go
@@ -3,24 +3,21 @@ package http
 import (
 	"github.com/go-chi/chi/v5"
 	"github.com/hiennguyen9874/stockk-go/internal/middleware"
-	"github.com/hiennguyen9874/stockk-go/internal/tickers"
+	"github.com/hiennguyen9874/stockk-go/internal/stockssnapshot"
 )
 
-func MapTickerRoute(router *chi.Mux, h tickers.Handlers, mw *middleware.MiddlewareManager) {
+func MapStockSnapshotRoute(router *chi.Mux, h stockssnapshot.Handlers, mw *middleware.MiddlewareManager) {
 	// User routes
-	router.Route("/ticker", func(r chi.Router) {
+	router.Route("/stocksnapshot", func(r chi.Router) {
 		// Protected routes
 		r.Group(func(r chi.Router) {
 			r.Use(mw.Verifier(true))
 			r.Use(mw.Authenticator())
 			r.Use(mw.CurrentUser())
 			r.Use(mw.ActiveUser())
-			r.Get("/", h.GetMulti())
-			r.Post("/search", h.SearchBySymbol())
 			// Per symbol routes
 			r.Route("/{symbol}", func(r chi.Router) {
-				r.Get("/", h.GetBySymbol())
-				r.Patch("/", h.UpdateIsActiveBySymbol())
+				r.Get("/", h.GetStockSnapshotBySymbol())
 			})
 		})
 	})
